Fix ldap password loading, prevent errors at launch, update README.md, delete unused code.